--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   json_annotation: ^4.9.0
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
+  bloc_test: ^10.0.0
+  get_it: ^8.1.0
 
 dev_dependencies:
 
@@ -72,6 +74,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
