--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   bloc_test: ^10.0.0
   get_it: ^8.1.0
+  syncfusion_flutter_charts: ^30.1.42
+  intl: ^0.20.2
 
 dev_dependencies:
 
