--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   get_it: ^8.1.0
   syncfusion_flutter_charts: ^30.1.42
   intl: ^0.20.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
 
